seperate loop as a header

--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -52,7 +52,9 @@ Treat software engineering like distributed systems, and force coordination with
     ```
 2. **worker phase**: six workers loop forever (`2x Claude`, `2x Codex`, `2x Gemini`).
 
-The loop is simple:
+---
+
+## loop
 
 1. Each agent pulls latest main.
 2. Claims one scoped task.
