add response to hacker news comments

--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -15,6 +15,24 @@ I tasked Claude, Codex, and Gemini to build a [SQLite-like engine](https://githu
 
 ---
 
+## response to [Hacker News](https://news.ycombinator.com/item?id=47031268) comments
+
+### does it actually work?
+Yes, for a supported subset of SQL. To establish a baseline, I integrated the [SQLLogicTest](https://www.sqlite.org/sqllogictest/doc/trunk/about.wiki) suite. 
+- **Pass Rate:** The engine passes **64 queries** (including core CRUD, JOINs, and GROUP BY).
+- **Failures:** Most failures in the 1,000+ query `select1.slt` suite are due to **unsupported syntax** (Subqueries, `CASE`, `EXISTS`).
+
+### code quality
+There are several slop patterns in the codebase:
+- **Freelist linear search:** The agents initially implemented a linear scan of the freelist to check for duplicates.
+- **Buffer Clones:** The pager was performing redundant `.clone()` calls on large page buffers during WAL flushes.
+- **Concurrency:** There is currently **no concurrency**.
+
+### is this "sqlite"?
+No. It is a "simulacrum" of SQLite’s architecture. It is an experiment in **agent orchestration**, not a production database, sorry for not making this clearer!
+
+---
+
 ## background
 
 Treat software engineering like distributed systems, and force coordination with: git, lock files, tests, and merge discipline.
@@ -121,7 +139,7 @@ Assumes you have the relevant CLIs installed (`claude`, `codex`, `gemini`), plus
 ## limitations
 
 - The documentation in the repo became enormous, `PROGRESS.md` became 490 lines and look at the sheer amount of [notes](https://github.com/kiankyars/sqlite/tree/main/notes); all this to say that the coalesce agent must be run as often as the other agents.
-- There isn't a great way to record token usage since each platform uses a different format, so I don't have a grasp on which agent pulled the most weight.
+- There isn't a great way to record token usage with cli coding agents (as opposed to API use which is trivial), so I don't have a grasp on which agent pulled the most weight.
 
 ---
 
@@ -129,14 +147,14 @@ Assumes you have the relevant CLIs installed (`claude`, `codex`, `gemini`), plus
 
 - Track "substantive run rate", since many are rate-limited/nothing happened.
 - Only Claude adds itself as a co-author to each commit and I did not do that for Codex and Gemini, so I need to add a commit message for Gemini and Codex.
-- Adding more strict observability because probably a lot of errors were due to the rate limit being hit mid work and then just not being able to like put then essentially at that point there was like only half finished work pushed.
+- Adding more strict observability because probably a lot of errors were due to rate-limiting.
 
 ---
 
 ## inspiration
 
-- https://cursor.com/blog/scaling-agents
-- https://www.anthropic.com/engineering/building-c-compiler
+- [https://cursor.com/blog/scaling-agents](https://cursor.com/blog/scaling-agents)
+- [https://www.anthropic.com/engineering/building-c-compiler](https://www.anthropic.com/engineering/building-c-compiler)
 
 ---
 
@@ -174,7 +192,7 @@ Gemini does not offer a way to monitor usage with their CLI. It's also not on a 
 ```bibtex
 @misc{kyars2026sqlite,
   author = {Kian Kyars},
-  title = {Building SQLite With a Small Swarm},
+  title = {building sqlite with a small swarm},
   year = {2026},
   month = feb,
   day = {12},
