add quote block

--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -15,21 +15,21 @@ I tasked Claude, Codex, and Gemini to build a [SQLite-like engine](https://githu
 
 ---
 
-## response to [Hacker News](https://news.ycombinator.com/item?id=47031268) comments
+## response to [hacker news](https://news.ycombinator.com/item?id=47031268) post
 
-### does it actually work?
-Yes, for a supported subset of SQL. To establish a baseline, I integrated the [SQLLogicTest](https://www.sqlite.org/sqllogictest/doc/trunk/about.wiki) suite. 
-- **Pass Rate:** The engine passes **64 queries** (including core CRUD, JOINs, and GROUP BY).
-- **Failures:** Most failures in the 1,000+ query `select1.slt` suite are due to **unsupported syntax** (Subqueries, `CASE`, `EXISTS`).
-
-### code quality
-There are several slop patterns in the codebase:
-- **Freelist linear search:** The agents initially implemented a linear scan of the freelist to check for duplicates.
-- **Buffer Clones:** The pager was performing redundant `.clone()` calls on large page buffers during WAL flushes.
-- **Concurrency:** There is currently **no concurrency**.
-
-### is this "sqlite"?
-No. It is a "simulacrum" of SQLite’s architecture. It is an experiment in **agent orchestration**, not a production database, sorry for not making this clearer!
+> ### does it actually work?
+> Yes, for a supported subset of SQL. To establish a baseline, I integrated the [SQLLogicTest](https://www.sqlite.org/sqllogictest/doc/trunk/about.wiki) suite. 
+> - **Pass Rate:** The engine passes **64 queries** (including core CRUD, JOINs, and GROUP BY).
+> - **Failures:** Most failures in the 1,000+ query `select1.slt` suite are due to **unsupported syntax** (Subqueries, `CASE`, `EXISTS`).
+> 
+> ### code quality
+> There are several slop patterns in the codebase:
+> - **Freelist linear search:** The agents initially implemented a linear scan of the freelist to check for duplicates.
+> - **Buffer Clones:** The pager was performing redundant `.clone()` calls on large page buffers during WAL flushes.
+> - **Concurrency:** There is currently **no concurrency**.
+> 
+> ### is this "sqlite"?
+> No. It is a "simulacrum" of SQLite’s architecture. It is an experiment in **agent orchestration**, not a production database.
 
 ---
 
