mention sqlite test suite

--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -9,9 +9,9 @@ categories: machine_learning
 
 I tasked Claude, Codex, and Gemini to build a [SQLite-like engine](https://github.com/kiankyars/sqlite) in Rust.
 
-- **~19k~** lines of code.
+- **~19k** lines of code.
 - Parser, planner, volcano executor, pager, b+trees, wal, recovery, joins, aggregates, indexing, transaction semantics, grouped aggregates, and stats-aware planning all implemented.
-- 282 unit tests, all passing.
+- 282 passing ai-written unit tests (this project certainly fails against the official sqlite test suite, so I did not bother testing).
 
 ---
 
