explain choice of 2 agents

--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -69,6 +69,8 @@ Treat software engineering like distributed systems, and force coordination with
     └── test.sh            // test harness script
     ```
 2. **worker phase**: six workers loop forever (`2x Claude`, `2x Codex`, `2x Gemini`).
+    - The choice of two workers per model is purely pragmatic: I can't afford more.
+    - I chose heterogeneous agents because it has not been done yet. There is no performance justification for this choice.
 
 ---
 
