add formatting tax paper + reformat

--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -18,17 +18,22 @@ I tasked Claude, Codex, and Gemini to build a [SQLite-like engine](https://githu
 ## response to [hacker news](https://news.ycombinator.com/item?id=47031268) post
 
 > ### does it actually work?
-> Yes, for a supported subset of SQL. To establish a baseline, I integrated the [SQLLogicTest](https://www.sqlite.org/sqllogictest/doc/trunk/about.wiki) suite. 
+>
+> Yes, for a supported subset of SQL. To establish a baseline, I integrated the [SQLLogicTest](https://www.sqlite.org/sqllogictest/doc/trunk/about.wiki) suite.
+>
 > - **Pass Rate:** The engine passes **64 queries** (including core CRUD, JOINs, and GROUP BY).
 > - **Failures:** Most failures in the 1,000+ query `select1.slt` suite are due to **unsupported syntax** (Subqueries, `CASE`, `EXISTS`).
-> 
+>
 > ### code quality
+>
 > There are several slop patterns in the codebase:
+>
 > - **Freelist linear search:** The agents initially implemented a linear scan of the freelist to check for duplicates.
 > - **Buffer Clones:** The pager was performing redundant `.clone()` calls on large page buffers during WAL flushes.
 > - **Concurrency:** There is currently **no concurrency**.
-> 
+>
 > ### is this "sqlite"?
+>
 > No. It is a "simulacrum" of SQLite’s architecture. It is an experiment in **agent orchestration**, not a production database.
 
 ---
@@ -56,21 +61,21 @@ Treat software engineering like distributed systems, and force coordination with
 ## workflow
 
 1. **bootstrap phase**: one Claude run generates baseline docs, crate skeleton, and test harness.
-    ```text
-    ├── Cargo.toml         // crate manifest
-    ├── DESIGN.md          // architecture design notes
-    ├── PROGRESS.md        // test & build progress
-    ├── README.md          // project overview
-    ├── agent_logs         // per-agent log files
-    ├── crates             // workspace subcrates
-    ├── current_tasks      // lock files
-    ├── notes              // inter-agent notes
-    ├── target             // build artifacts
-    └── test.sh            // test harness script
-    ```
+   ```text
+   ├── Cargo.toml         // crate manifest
+   ├── DESIGN.md          // architecture design notes
+   ├── PROGRESS.md        // test & build progress
+   ├── README.md          // project overview
+   ├── agent_logs         // per-agent log files
+   ├── crates             // workspace subcrates
+   ├── current_tasks      // lock files
+   ├── notes              // inter-agent notes
+   ├── target             // build artifacts
+   └── test.sh            // test harness script
+   ```
 2. **worker phase**: six workers loop forever (`2x Claude`, `2x Codex`, `2x Gemini`).
-    - The choice of two workers per model is purely pragmatic: I can't afford more.
-    - I chose heterogeneous agents because it has not been done yet. There is no performance justification for this choice.
+   - The choice of two workers per model is purely pragmatic: I can't afford more.
+   - I chose heterogeneous agents because it has not been done yet. There is no performance justification for this choice.
 
 ---
 
@@ -164,24 +169,24 @@ Assumes you have the relevant CLIs installed (`claude`, `codex`, `gemini`), plus
 
 ### code size snapshot
 
-| Language | Files | Lines | Non-blank/Non-comment |
-| :--- | :--- | :--- | :--- |
-| **Rust** | 14 | 18,650 | ~16,155 |
-| **Shell** | 1 | 199 | ~139 |
-| **Total** | **15** | **18,849** | **~16,294** |
+| Language  | Files  | Lines      | Non-blank/Non-comment |
+| :-------- | :----- | :--------- | :-------------------- |
+| **Rust**  | 14     | 18,650     | ~16,155               |
+| **Shell** | 1      | 199        | ~139                  |
+| **Total** | **15** | **18,849** | **~16,294**           |
 
-*154 commits between 2026-02-10 and 2026-02-12.*
+_154 commits between 2026-02-10 and 2026-02-12._
 
 ### usage
 
 Gemini does not offer a way to monitor usage with their CLI. It's also not on a weekly usage basis, but rather a 24-hour usage basis. For codex, I used 100% of the Pro Plan weekly usage, which is currently on a 2x promotion. I used 70% of the Claude Pro weekly usage.
 
 - codex
-    - ![](/imgs/2026-02-12-sqlite/sqlite1.png)
+  - ![](/imgs/2026-02-12-sqlite/sqlite1.png)
 - claude
-    - ![](/imgs/2026-02-12-sqlite/sqlite2.png)
-    - ![](/imgs/2026-02-12-sqlite/sqlite3.png)
-    - ![](/imgs/2026-02-12-sqlite/sqlite4.png)
+  - ![](/imgs/2026-02-12-sqlite/sqlite2.png)
+  - ![](/imgs/2026-02-12-sqlite/sqlite3.png)
+  - ![](/imgs/2026-02-12-sqlite/sqlite4.png)
 
 ### disclaimer
 
