update dune and biomaxing

--- a/_posts/blog/2026-02-22-dune.md
+++ b/_posts/blog/2026-02-22-dune.md
@@ -7,3 +7,10 @@ categories: book_review
 
 This is my first blog book review.
 
+Dune is very out of distribution when compared to other science fiction novels in terms of character, plot, writing style, etc. which meant I didn’t understand many things.
+
+I've never read a book where, even halfway through I was still really unclear of the dynamics, groups (like the Bene Gesserit) and characters, but it was still compelling.
+
+It's unique how Frank integrates words and concepts from many different cultures. For example, there's many words that are Iranian such as padishah emperor, German words are also present.
+
+I recommend this book as it seems to me an anti-memetic force.
