--- a/_posts/blog/2026-02-24-caro.md
+++ b/_posts/blog/2026-02-24-caro.md
@@ -5,7 +5,10 @@ date: 2026-02-24
 categories: 
 ---
 
-Only read 87 of ~2400 pages, but I didn't enjoy it so stopped reading.
+Only read 87 of ~2400 pages in the first few days of 2026, but I didn't enjoy it so stopped reading.
 
 I picked up the series because of Dwarkesh's general praising of the author and the books.
 
+"this book just shows so far how much of an arrogant power demon this guy was and for that reason I'm inclined to say I will not be finishing it.
+
+It's also incredibly worrisome that he was the single reason for the Vietnam more effort being scaled by an order of magnitude and also making the presidential role more authoritative"
