--- a/_posts/blog/2025-07-30-graphs.md
+++ b/_posts/blog/2025-07-30-graphs.md
@@ -12,3 +12,7 @@ Graphs about AGI, datacenter scaling, and capital which are provoking:
 ![](/imgs/2025-07-30-graphs/pie.png)
 ![](/imgs/2025-07-30-graphs/semiconductor.webp)
 ![](/imgs/2025-07-30-graphs/d2r.jpeg)
+
+Bonus photo:
+
+![](/imgs/2025-07-30-graphs/puerto-rico.webp)
