update some categories

--- a/_posts/blog/2026-02-24-caro.md
+++ b/_posts/blog/2026-02-24-caro.md
@@ -2,7 +2,7 @@
 layout: post
 title: Caro
 date: 2026-02-24
-categories: 
+categories: book_review
 ---
 
 Only read 87 of ~2400 pages in the first few days of 2026, but I didn't enjoy it so stopped reading.
