--- a/_posts/blog/2026-02-25-substack.md
+++ b/_posts/blog/2026-02-25-substack.md
@@ -2,7 +2,7 @@
 layout: post
 title: Substack
 date: 2026-02-25
-categories: 
+categories: meta
 ---
 
 Hello, world. In my quest to dominate the blogging world, it has become apparent that substack offers more leverage than hosting a blog on my personal website. Therefore, I am posting there from now on. Please visit my substack [here](https://substack.com/@kiankyars).
