--- a/_posts/blog/2026-02-25-substack.md
+++ b/_posts/blog/2026-02-25-substack.md
@@ -6,3 +6,5 @@ categories: meta
 ---
 
 Hello, world. In my quest to dominate the blogging world, it has become apparent that substack offers more leverage than hosting a blog on my personal website. Therefore, I am posting there from now on. Please visit my substack [here](https://substack.com/@kiankyars).
+
+I intend on posting on hacker news as well LessWrong to get more reach to become the Matt Levine for AI.
